--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,6 +38,7 @@ subjects:
 - !lcc 'PA'
 - !lcsh 'Oedipus (Greek mythological figure) -- Drama'
 - !lcsh 'Tragedies'
+- GITenberg
 title: 'Oedipus King of Thebes
 
   Translated into English Rhyming Verse with Explanatory Notes'
